# InverseKinematics7dof

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: InverseKinematics.h  Robot.h
src/: CMakeLists.txt  InverseKinematics.cpp  Robot.cpp  main.cpp  test.cpp
tests/: CMakeLists.txt  test_inverse_kinematics.cpp
